fix x-overflow in drawer

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ gaia-drawer > #drawer-main {
 
 gaia-drawer #network-list {
   flex: 1 1 0%;
-  overflow-x: hidden;
   overflow-y: scroll;
   color: var(--text-color);
   background-color: var(--background);
